force-app/main/default/objects/Agent_Session_Rule__c/Agent_Session_Rule__c.object-meta.xml
<CustomObject>
    <description>Defines session persistence rules for Agentforce chat components on Experience Cloud pages. Rules are matched by deployment and route to control session behavior.</description>
    <label>Agent Session Rule</label>
    <nameField>
        <displayFormat>ASR-{0000}</displayFormat>
        <label>Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Session Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>