force-app/main/default/objects/Agent_Session_Rule__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>The session persistence action to apply for this route</description>
    <label>Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do_Not_Persist</fullName>
                <default>true</default>
                <label>Do Not Persist</label>
            </value>
            <value>
                <fullName>Clear_Session</fullName>
                <label>Clear Session</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>