force-app/main/default/objects/Agent_Session_Rule__c/fields/Deployment_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Developer_Name__c</fullName>
    <description>The API name of the Embedded Service Deployment this rule applies to</description>
    <label>Deployment Developer Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>