force-app/main/default/objects/Agent_Session_Rule__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this rule is currently active. Inactive rules are ignored.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>