force-app/main/default/objects/Agent_Session_Rule__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <description>The page route/path this rule applies to (e.g., /help, /contact). For Aura sites, this is the path after /s/. For LWR sites, this is the path directly after the site name.</description>
    <label>Route</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>