force-app/main/default/objects/Agent_Session_Rule__c/fields/Site_Type__c.field-meta.xml
<CustomField>
    <fullName>Site_Type__c</fullName>
    <description>The type of Experience Cloud site this rule applies to. Aura sites have /s/ in the URL path, LWR sites do not.</description>
    <label>Site Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
                <default>true</default>
                <label>Both</label>
            </value>
            <value>
                <fullName>Aura</fullName>
            </value>
            <value>
                <fullName>LWR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>